Done with part 3

--- a/cs180/proj3/index.html
+++ b/cs180/proj3/index.html
@@ -126,25 +126,16 @@
           </td>
         </tr>
       </table>
-
     </div>
     <br> <br>
+
+    <h2 align="middle">Section III: The Morph Sequence</h2>
     <div class="bounding-box">
       <h3 align="center">
-        Hybrid Images
+        The Morph Sequence
       </h3>
       <p>
-        In this section, I created hybrid images which are static images that change in interpretation as a function of
-        the viewing distance. The main idea is that at closer distances the image with higher frequencies would dominate
-        and easier to see while at further distances the image with lower frequencies would dominate. By blending the
-        high frequency portion of one image with the low-frequency portion of another, I would get a hybrid image that
-        leads to different interpretations at different distances.
-
-        I followed along with the 2006 SIGGRAPH <a
-          href="http://olivalab.mit.edu/publications/OlivaTorralb_Hybrid_Siggraph06.pdf">algorithm</a> to create these
-        hybrid images by first applying a Gaussian filter to the two images and then subtracting the low-frequency
-        portion from the original to get the high-frequency portion. I then combined the high-frequency portion of one
-        image with the low-frequency portion of another to create the hybrid image. Here are the results:
+       After morphing my face with Steph Curry's, I decided to vary the <code class="highlighter-rouge">warp_frac</code> and <code class="highlighter-rouge">dissolve_frac</code> to create a morph sequence. These two parameters controlled how much warping and cross dissolving between the two images and ranged from 0 to 1. I had also created a video of the morph sequence to show the gradual change between the two faces. For the video, I created 55 equally spaced frames, used an fps of 20, and also reversed it to show Steph Curry morphing into my face as well. Here is the video:
       </p>
       <table>
         <tr align="center">
@@ -163,271 +154,6 @@
         </tr>
       </table>
       <br>
-      <p>
-        I decided to overlay two Akron legends: Steph Curry and Lebron James over each other. The results were
-        interesting as the hybrid image showed a mix of both players at different distances. At closer distances, the
-        image looked more like Steph Curry while at further distances, the image looked more like Lebron James. Here are
-        the results:
-      </p>
-      <div align="middle"></div>
-      <table>
-        <tr align="center">
-          <td>
-            <img src="./Images/StephLebron/steph-curry.jpeg" align="middle" width="300px" />
-            <figcaption>Steph Curry (High Frequency)</figcaption>
-          </td>
-          <td>
-            <img src="./Images/StephLebron/lebron-james.jpeg" align="middle" width="300px" />
-            <figcaption>Lebron James (Low Frequency)</figcaption>
-          </td>
-          <td>
-            <img src="./Images/StephLebron/steph-curry_lebron-james_hybrid.png" align="middle" width="300px" />
-            <figcaption>Hybrid Image</figcaption>
-          </td>
-        </tr>
-      </table>
-      <br>
-
-      I also created a hybrid image between a lion and a tiger. Through this process, I experimented with using each one
-      as the high frequency image and the other as the low frequency image. Here are the results:
-
-      <table>
-        <tr align="center">
-          <td>
-            <img src="./Images/TigerLion/tiger.png" align="middle" width="300px" />
-            <figcaption>Tiger</figcaption>
-          </td>
-          <td>
-            <img src="./Images/TigerLion/lion.png" align="middle" width="300px" />
-            <figcaption>Lion</figcaption>
-          </td>
-          <td>
-            <img src="./Images/TigerLion/tiger_lion_hybrid.png" align="middle" width="300px" />
-            <figcaption>Tiger (High) Lion (Low)</figcaption>
-          </td>
-          <td>
-            <img src="./Images/TigerLion/lion_tiger_hybrid.png" align="middle" width="300px" />
-            <figcaption>Lion (High) Tiger (Low)</figcaption>
-          </td>
-        </tr>
-      </table>
-      <br>
-      My favorite hybrid image was the one between Steph and Lebron. I applied the FFT to the original images, the
-      filtered images, and the hybrid image. Here are the results:
-      <table>
-        <tr align="center">
-          <td>
-            <img src="./Images/StephLebron/high-freq-fft.png" align="middle" width="300px" />
-            <figcaption>High Frequency Image FFT</figcaption>
-          </td>
-          <td>
-            <img src="./Images/StephLebron/filtered-high-freq-fft.png" align="middle" width="300px" />
-            <figcaption>Filtered High Frequency Image FFT</figcaption>
-          </td>
-          <td>
-            <img src="./Images/StephLebron/low-freq-fft.png" align="middle" width="300px" />
-            <figcaption>Low Frequency Image FFT</figcaption>
-          </td>
-          <td>
-            <img src="./Images/StephLebron/filtered-low-freq-fft.png" align="middle" width="300px" />
-            <figcaption>Filtered Low Frequency Image FFT</figcaption>
-          </td>
-          <td>
-            <img src="./Images/StephLebron/hybrid-fft.png" align="middle" width="300px" />
-            <figcaption>Hybrid Image FFT</figcaption>
-          </td>
-        </tr>
-      </table>
-      <br>
-      As I was trying to get the Steph and Lebron hybrid image to work, I had gotten a few failures. For this one, I had
-      tried to combine the two players but they were facing different directions which made it difficult to align and
-      get a good hybrid image. Here are the results:
-      <table>
-        <tr align="center">
-          <td>
-            <img src="./Images/StephLebron/steph.jpg" align="middle" width="300px" />
-            <figcaption>Steph Curry</figcaption>
-          </td>
-          <td>
-            <img src="./Images/StephLebron/lebron.jpg" align="middle" width="300px" />
-            <figcaption>Lebron James</figcaption>
-          </td>
-          <td>
-            <img src="./Images/StephLebron/steph-lebron.jpg" align="middle" width="300px" />
-            <figcaption>Steph Lebron Hybrid Failure</figcaption>
-          </td>
-        </tr>
-      </table>
-      <br>
-    </div>
-    <br> <br>
-    <div class="bounding-box">
-      <h3 align="center">
-        Gaussian and Laplacian Stacks
-      </h3>
-      <p>
-        Next, I explored blending images together using Gaussian and Laplacian stacks. To create the Gaussian stack, I
-        applied a low pass filter to the original image and then on each successive layer. This meant that the blurring
-        accumulated as the layers increased. To create the Laplacian stack, I took the difference between each of the
-        Gaussian layers. The last level of the Laplacian stack was the same as the last level of the Gaussian stack.
-        I used the following formula to find the Laplacian stack:
-
-        $$L_i = G_i - G_{i+1}$$
-
-        Here are the Gaussian and Laplacian stacks for the apple and orange:
-      </p>
-      <table>
-        <tr align="center">
-          <td>
-            <img src="./Images/AppleOrange/apple-gaussian.png" align="middle" />
-            <figcaption>Apple Gaussian Stack</figcaption>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <img src="./Images/AppleOrange/apple-laplacian.png" align="middle" />
-            <figcaption>Apple Laplacian Stack</figcaption>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <img src="./Images/AppleOrange/orange-gaussian.png" align="middle" />
-            <figcaption>Orange Gaussian Stack</figcaption>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <img src="./Images/AppleOrange/orange-laplacian.png" align="middle" />
-            <figcaption>Orange Laplacian Stack</figcaption>
-          </td>
-        </tr>
-      </table>
-    </div>
-    <br> <br>
-    <div class="bounding-box">
-      <h3 align="middle">
-        Multiresolution Blending
-      </h3>
-      <p>
-        To implement multiresolution blending, I used the two images' Laplacian stacks as well as a mask's Gaussian
-        stack. The mask's Gaussians tack helps to blur the edges and blend the two images' frequencies together. I used
-        the algorithms above to create the Gaussian and Laplacian stacks. This is the formula I used to blend the
-        images:
-
-        $$\text{Blended Image}_i = \text{left_l_stack}_i * \text{mask_g_stack}_i + \text{right_l_stack}_i * (1 -
-        \text{mask_g_stack}_i)$$
-        Here are the results for the apple and orange:
-      </p>
-      <table>
-        <tr align="center">
-          <td>
-            <img src="./Images/AppleOrange/apple.jpeg" align="middle" />
-            <figcaption>Apple Image</figcaption>
-          </td>
-          <td>
-            <img src="./Images/AppleOrange/orange.jpeg" align="middle" />
-            <figcaption>Orange Image</figcaption>
-          </td>
-          <td>
-            <img src="./Images/AppleOrange/apple_mask.png" alt="">
-            <figcaption>Mask</figcaption>
-          </td>
-        </tr>
-      </table>
-      <table>
-        <tr align="center">
-          <td>
-            <img src="./Images/AppleOrange/apple-orange-blended.png" align="middle" />
-            <figcaption>Apple Orange Blended Image</figcaption>
-          </td>
-        </tr>
-      </table>
-      <br>
-      <p>
-        I also blended together Michael Jordan and Jimmy Butler as there has been a rumor going on that Butler is
-        Jordan's lost son. I wanted to see how similar they were and created a mask to blend them together. Here are the
-        results:
-      </p>
-      <table>
-        <tr align="center">
-          <td>
-            <img src="./Images/JordanButler/jordan.jpeg" align="middle" width="250px" />
-            <figcaption>Jordan Image</figcaption>
-          </td>
-          <td>
-            <img src="./Images/JordanButler/butler.jpeg" align="middle" width="250px" />
-            <figcaption>Butler Image</figcaption>
-          </td>
-          <td>
-            <img src="./Images/AppleOrange/apple_mask.png" align="middle" widht="250px">
-            <figcaption>Mask</figcaption>
-          </td>
-        </tr>
-      </table>
-      <table>
-        <tr align="center">
-          <td>
-            <img src="./Images/JordanButler/jordan-butler-blended.png" align="middle" />
-            <figcaption>Jordan Butler Blended Image</figcaption>
-          </td>
-        </tr>
-      </table>
-
-      <br>
-      For the irregular mask, I decided to blend my face onto Steph Curry as he is shooting a three. I wanted to see how
-      well the blending would work with a mask that was not a perfect circle. Here are the results:
-      <table>
-        <tr align="center">
-          <td>
-            <img src="./Images/IanSteph/ian.png" align="middle" width="300px" />
-            <figcaption>Ian Image</figcaption>
-          </td>
-          <td>
-            <img src="./Images/IanSteph/steph-shooting.jpg" align="middle" width="300px" />
-            <figcaption>Steph Shooting Image</figcaption>
-          </td>
-          <td>
-            <img src="./Images/IanSteph/ian-mask.jpg" align="middle" width="300px">
-            <figcaption>Mask</figcaption>
-          </td>
-        </tr>
-      </table>
-      <table>
-        <tr align="center">
-          <td>
-            <img src="./Images/IanSteph/ian-steph-blended.png" align="middle" />
-            <figcaption>Ian Steph Blended Image</figcaption>
-          </td>
-        </tr>
-      </table>
-      <br>
-      I created another irregular mask where I changed Mona Lisa's background with a post-apocalyptic view. I wanted to
-      see how well the blending would work with a mask that was not a perfect circle. Here are the results:
-      <table>
-        <tr align="center">
-          <td>
-            <img src="./Images/MonaApocalypse/mona.jpeg" align="middle" width="300px" />
-            <figcaption>Mona Image</figcaption>
-          </td>
-          <td>
-            <img src="./Images/MonaApocalypse/apocalypse.jpeg" align="middle" width="300px" />
-            <figcaption>Apocalypse Background Image</figcaption>
-          </td>
-          <td>
-            <img src="./Images/MonaApocalypse/mona-mask.jpg" align="middle" width="300px">
-            <figcaption>Mask</figcaption>
-          </td>
-        </tr>
-      </table>
-      <table>
-        <tr align="center">
-          <td>
-            <img src="./Images/MonaApocalypse/mona-apocalypse-blended.png" align="middle" />
-            <figcaption>Mona Apocalypse Blended Image</figcaption>
-          </td>
-        </tr>
-      </table>
-    </div>
   </div>
 </body>
 
