Done with part 3

--- a/cs180/proj3/index.html
+++ b/cs180/proj3/index.html
@@ -140,16 +140,8 @@
       <table>
         <tr align="center">
           <td>
-            <img src="./Images/DerekNutmeg/nutmeg.jpg" align="middle" width="300px" />
-            <figcaption>Nutmeg (High Frequency)</figcaption>
-          </td>
-          <td>
-            <img src="./Images/DerekNutmeg/DerekPicture.jpg" align="middle" width="300px" />
-            <figcaption>Derek (Low Frequency)</figcaption>
-          </td>
-          <td>
-            <img src="./Images/DerekNutmeg/derek-nutmeg-final.jpg" align="middle" width="300px" />
-            <figcaption>Hybrid Image</figcaption>
+            <img src="./Images/IanSteph/ian_steph_curry.gif" align="middle" width="300px" />
+            <figcaption>Ian Steph Morph Sequence</figcaption>
           </td>
         </tr>
       </table>
