Done with bells and whistles

--- a/cs180/proj3/index.html
+++ b/cs180/proj3/index.html
@@ -145,6 +145,65 @@
           </td>
         </tr>
       </table>
+  </div>
+  <br>
+  <br>
+  <h2 align="middle">Section IV: The Mean Face of a Population</h2>
+    <div class="bounding-box">
+      <h3 align="center">
+        The Mean Face
+      </h3>
+      <p>
+       After morphing my face with Steph Curry's, I decided to vary the <code class="highlighter-rouge">warp_frac</code> and <code class="highlighter-rouge">dissolve_frac</code> to create a morph sequence. These two parameters controlled how much warping and cross dissolving between the two images and ranged from 0 to 1. I had also created a video of the morph sequence to show the gradual change between the two faces. For the video, I created 55 equally spaced frames, used an fps of 20, and also reversed it to show Steph Curry morphing into my face as well. Here is the video:
+      </p>
+      <table>
+        <tr align="center">
+          <td>
+            <img src="./Images/IanSteph/ian_steph_curry.gif" align="middle" width="300px" />
+            <figcaption>Ian Steph Morph Sequence</figcaption>
+          </td>
+        </tr>
+      </table>
+  </div>
+  <br>
+  <br>
+  <h2 align="middle">Section VI: Bells and Whistles</h2>
+    <div class="bounding-box">
+      <h3 align="center">
+        Morphing to White Guy
+      </h3>
+      <p>
+       For my bells and whistles, I decided to morph my face with an average white guy's face that I had found online. To get just the shape of the other white guy, I used a <code class="highlighter-rouge">warp_frac</code> of 0 and a <code class="highlighter-rouge">dissolve_frac</code> of 0.6. Then, to get just the color, I used a <code class="highlighter-rouge">warp_frac</code> of 1 and a <code class="highlighter-rouge">dissolve_frac</code> of 0.2. Finally, I used a <code class="highlighter-rouge">warp_frac</code> of 0.5 and a <code class="highlighter-rouge">dissolve_frac</code> of 0.5 to get both a mix of the shape and color. Here are the images:
+      </p>
+      <table>
+        <tr align="center">
+          <td>
+            <img src="./Images/IanWhiteGuy/ian.png" align="middle" width="400px" />
+            <figcaption>Ian (Original)</figcaption>
+          </td>
+          <td>
+            <img src="./Images/IanWhiteGuy/average_white_guy.jpg" align="middle" width="400px" />
+            <figcaption>Average White Guy (Original)</figcaption>
+          </td>
+        </tr>
+      </table>
+      <br>
+      <table>
+        <tr align="center">
+          <td>
+            <img src="./Images/IanWhiteGuy/ian_white_guy_shape.png" align="middle" width="400px" />
+            <figcaption>White Guy Shape</figcaption>
+          </td>
+          <td>
+            <img src="./Images/IanWhiteGuy/ian_white_guy_color.png" align="middle" width="400px" />
+            <figcaption>White Guy Color</figcaption>
+          </td>
+          <td>
+            <img src="./Images/IanWhiteGuy/ian_white_guy_merge.png" align="middle" width="400px" />
+            <figcaption>White Guy Shape and Color</figcaption>
+          </td>
+        </tr>
+      </table>
       <br>
   </div>
 </body>
