Done with writeup

--- a/cs180/proj3/index.html
+++ b/cs180/proj3/index.html
@@ -253,6 +253,44 @@
     </div>
     <br>
     <br>
+    <h2 align="middle">Section V: Caricature</h2>
+    <div class="bounding-box">
+      <h3 align="center">
+        Extrapolating from the Mean
+      </h3>
+      <p>
+        For the caricature, I used the mean neutral Dane face from the last step and extrapolated away from it. The
+        equation I used was:
+        $$
+        \alpha * \text{Ian} + (1 - \alpha) * \text{average Dane}
+        $$
+        I set $\alpha$ to be larger than 1 to extrapolate in the direction of Ian's face. Here are the images:
+      </p>
+      <table>
+        <tr align="center">
+          <td>
+            <img src="./Images/Dane/caricature1.5.png" align="middle" width="400px" />
+            <figcaption>$\alpha = 1.5$</figcaption>
+          </td>
+          <td>
+            <img src="./Images/Dane/caricature2.png" align="middle" width="400px" />
+            <figcaption>$\alpha = 2.0$</figcaption>
+          </td>
+        </tr>
+        <tr align="center">
+          <td>
+            <img src="./Images/Dane/caricature2.5.png" align="middle" width="400px" />
+            <figcaption>$\alpha = 2.5$</figcaption>
+          </td>
+          <td>
+            <img src="./Images/Dane/caricature3.png" align="middle" width="400px" />
+            <figcaption>$\alpha = 3.0$</figcaption>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <br>
+    <br>
     <h2 align="middle">Section VI: Bells and Whistles</h2>
     <div class="bounding-box">
       <h3 align="center">
