Added note for gif

--- a/cs180/proj3/index.html
+++ b/cs180/proj3/index.html
@@ -42,6 +42,11 @@
 
     <div class="bounding-box">
 
+      <h2 align="middle">Note</h2>
+
+      This report contains a gif that may not load properly if viewed in the pdf. Please click the link above to view the report online.
+      <br><br>
+
       <h2 align="middle">Overview</h2>
 
       This project explores how to create a face morph animation by warping the two images into a "mid-way" face. I used
